--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4",
      "ngx-toastr": "^14.0.0"
+     "ngx-spinner": "^13.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.0.0",
